test/libsolidity/syntaxTests/literalSuffixes/usableAsSuffix/invalid_type_as_suffix.sol
contract C {
    function f() pure public {
        (1 type).max;
    }
}
// ----
// ParserError 2314: (55-59): Expected ',' but got 'type'
